[package]
name = "collatz-wasm"
version = "0.1.0"
edition = "2018"
authors = ["Hexagon Sixx <npm@fet.li>"]
description = "Collatz Conjecture function in WASM"
license = "MIT/Apache-2.0"
repository = "https://github.com/hexagon6/collatz-wasm"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"

[profile.release]
lto = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
